force-app/main/default/objects/Network__c/Network__c.object-meta.xml
<CustomObject>
    <description>SSSW - Used to store the Facility Details from WICIS and Mapping of Bypasses</description>
    <label>Network</label>
    <nameField>
        <label>Network Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Network</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>