force-app/main/default/objects/Network__c/fields/Air_Parcel_Air_Parcel_Insured__c.field-meta.xml
<CustomField>
    <fullName>Air_Parcel_Air_Parcel_Insured__c</fullName>
    <inlineHelpText>Article ID prefix CF, CW, CY</inlineHelpText>
    <label>Air Parcel &amp; Air Parcel Insured</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>Product not available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>