force-app/main/default/objects/Network__c/fields/AMLCTF_Area__c.field-meta.xml
<CustomField>
    <fullName>AMLCTF_Area__c</fullName>
    <formula>Parent_Network__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area</label>
    <type>Text</type>
</CustomField>