force-app/main/default/objects/Network__c/fields/AMSA__c.field-meta.xml
<CustomField>
    <fullName>AMSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Australian Maritime Safety Authority-Id</label>
    <type>Checkbox</type>
</CustomField>