force-app/main/default/objects/Network__c/fields/APKeypass__c.field-meta.xml
<CustomField>
    <fullName>APKeypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Australia Post Keypass identity card</label>
    <type>Checkbox</type>
</CustomField>