force-app/main/default/objects/Network__c/fields/APT_Apttus_LP__c.field-meta.xml
<CustomField>
    <fullName>APT_Apttus_LP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apttus LP</label>
    <type>Checkbox</type>
</CustomField>