force-app/main/default/objects/Network__c/fields/APT_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>APT_Business_Unit__c</fullName>
    <label>APT Business Unit</label>
    <length>225</length>
    <type>Text</type>
</CustomField>