force-app/main/default/objects/Network__c/fields/APT_DWS_ID__c.field-meta.xml
<CustomField>
    <fullName>APT_DWS_ID__c</fullName>
    <externalId>true</externalId>
    <label>DWS ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>