force-app/main/default/objects/Network__c/fields/APT_eParcel_Enabled__c.field-meta.xml
<CustomField>
    <fullName>APT_eParcel_Enabled__c</fullName>
    <label>eParcel Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Can be Enabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>