force-app/main/default/objects/Network__c/fields/APT_Transport_Capability__c.field-meta.xml
<CustomField>
    <fullName>APT_Transport_Capability__c</fullName>
    <label>Transport Capability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Either VAN or Truck</fullName>
            </value>
            <value>
                <fullName>VAN</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Both Van and Truck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>