force-app/main/default/objects/Network__c/fields/ATO__c.field-meta.xml
<CustomField>
    <fullName>ATO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATO - TFN application for individuals</label>
    <type>Checkbox</type>
</CustomField>