force-app/main/default/objects/Network__c/fields/Business_Contract_Delivery_Points__c.field-meta.xml
<CustomField>
    <fullName>Business_Contract_Delivery_Points__c</fullName>
    <description>The current  number of business contract delivery points for the LPO</description>
    <inlineHelpText>The current  number of business contract delivery points for the LPO</inlineHelpText>
    <label>Business Contract Delivery Points</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>