force-app/main/default/objects/Network__c/fields/Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>StarTrack required relationship to enable declarative update of a case&apos;s business hours via the depot (network)</description>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Network</relationshipName>
    <type>Lookup</type>
</CustomField>