force-app/main/default/objects/Network__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Business unit field is used by SSSW reporting team.</description>
    <label>Business Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>