force-app/main/default/objects/Network__c/fields/Camera_Qty__c.field-meta.xml
<CustomField>
    <fullName>Camera_Qty__c</fullName>
    <description>Total of Equipment Type Code starting with CAM</description>
    <inlineHelpText>Total of Equipment Type Code starting with CAM</inlineHelpText>
    <label>Camera Qty</label>
    <summarizedField>Network_Equipment__c.Equipment_Count_On_Premises__c</summarizedField>
    <summaryFilterItems>
        <field>Network_Equipment__c.Equipment_Type_Code__c</field>
        <operation>startsWith</operation>
        <value>CAM</value>
    </summaryFilterItems>
    <summaryForeignKey>Network_Equipment__c.Network_Facility__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>