force-app/main/default/objects/Network__c/fields/CBA__c.field-meta.xml
<CustomField>
    <fullName>CBA__c</fullName>
    <description>SSSW</description>
    <label>CBA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash &amp; Cheque</fullName>
            </value>
            <value>
                <fullName>Cheque Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>