force-app/main/default/objects/Network__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>StarTrack City field will store the network(depot) city value.</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>