force-app/main/default/objects/Network__c/fields/Contact_Facility__c.field-meta.xml
<CustomField>
    <fullName>Contact_Facility__c</fullName>
    <description>DO NOT ADD SERVICENOW - this field is integrated to Tibco To ServiceNow
A change request will be needed for Tibco</description>
    <inlineHelpText>If ServiceNow is required, please contact Voice &amp; Desktop</inlineHelpText>
    <label>Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>MyNetwork</fullName>
            </value>
            <value>
                <fullName>Manually</fullName>
            </value>
            <value>
                <fullName>ServiceNow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>