force-app/main/default/objects/Network__c/fields/Courier__c.field-meta.xml
<CustomField>
    <fullName>Courier__c</fullName>
    <inlineHelpText>Product sub category = Courier</inlineHelpText>
    <label>Courier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>Product not available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>