force-app/main/default/objects/Network__c/fields/Email_2__c.field-meta.xml
<CustomField>
    <fullName>Email_2__c</fullName>
    <label>Email 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>