force-app/main/default/objects/Network__c/fields/Escalation_Contact_Phone_3__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Contact_Phone_3__c</fullName>
    <description>Escalation Contact name for the depot - Facility Manager</description>
    <inlineHelpText>Escalation Contact name for the depot - Facility Manager</inlineHelpText>
    <label>Facility Manager Contact Number</label>
    <type>Phone</type>
</CustomField>