force-app/main/default/objects/Network__c/fields/Firearms_WA__c.field-meta.xml
<CustomField>
    <fullName>Firearms_WA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Firearms Licence Application - WA</label>
    <type>Checkbox</type>
</CustomField>