force-app/main/default/objects/Network__c/fields/Insurance_Ann__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Ann__c</fullName>
    <description>Retail PON Geopointe Related Field</description>
    <label>Insurance (Ann)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Met_No</valueSetName>
    </valueSet>
</CustomField>