force-app/main/default/objects/Network__c/fields/Integrated_Job_Dispatch_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Job_Dispatch_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the network is eligible for integration with dispatch system for PUD Pickup and Delivery Jobs booked via the booking system. If eligible, Pickup and Delivery Jobs serviced by this network are sent to dispatch system via integration.</description>
    <inlineHelpText>Indicates the network is eligible for integration with dispatch system for PUD Pickup and Delivery Jobs booked via the booking system. If eligible, Pickup and Delivery Jobs serviced by this network are sent to dispatch system via integration.</inlineHelpText>
    <label>Integrated Job Dispatch Enabled</label>
    <type>Checkbox</type>
</CustomField>