force-app/main/default/objects/Network__c/fields/LEEP_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>LEEP_Order_Value__c</fullName>
    <description>Retail PON Geopointe Related Field</description>
    <label>LEEP Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>