force-app/main/default/objects/Network__c/fields/Letter__c.field-meta.xml
<CustomField>
    <fullName>Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Letter</label>
    <type>Checkbox</type>
</CustomField>