force-app/main/default/objects/Network__c/fields/LICPERFHIGHRISK_QLD_F1__c.field-meta.xml
<CustomField>
    <fullName>LICPERFHIGHRISK_QLD_F1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Licence - high risk work - QLD(F1)</label>
    <type>Checkbox</type>
</CustomField>