force-app/main/default/objects/Network__c/fields/Network_Manager__c.field-meta.xml
<CustomField>
    <fullName>Network_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner Info - Approval authority to assign new Licences to LPO or update existing Licences</description>
    <inlineHelpText>This user has the authority to approve new Licences to LPO or update existing Licences.</inlineHelpText>
    <label>Network Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Network</relationshipName>
    <type>Lookup</type>
</CustomField>