force-app/main/default/objects/Network__c/fields/Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Org_ID__c</fullName>
    <externalId>true</externalId>
    <label>Organisation ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>