force-app/main/default/objects/Network__c/fields/ORG_UNIT_ADDR_2__c.field-meta.xml
<CustomField>
    <fullName>ORG_UNIT_ADDR_2__c</fullName>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>