force-app/main/default/objects/Network__c/fields/ORG_UNIT_ADDR_3__c.field-meta.xml
<CustomField>
    <fullName>ORG_UNIT_ADDR_3__c</fullName>
    <externalId>true</externalId>
    <label>Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>