force-app/main/default/objects/Network__c/fields/Org_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Org_Unit_Type__c</fullName>
    <label>Organisation Unit Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>