force-app/main/default/objects/Network__c/fields/Outward_Bulk_Mail_Processing_Code__c.field-meta.xml
<CustomField>
    <fullName>Outward_Bulk_Mail_Processing_Code__c</fullName>
    <description>This code determines the level of OMPF performed at the LPO</description>
    <inlineHelpText>This code determines the level of OMPF performed at the LPO</inlineHelpText>
    <label>Outward Bulk Mail Processing Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PD</fullName>
            </value>
            <value>
                <fullName>PS</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>