force-app/main/default/objects/Network__c/fields/Parcel__c.field-meta.xml
<CustomField>
    <fullName>Parcel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parcel</label>
    <type>Checkbox</type>
</CustomField>