force-app/main/default/objects/Network__c/fields/Parcel_Delivery_Comments__c.field-meta.xml
<CustomField>
    <fullName>Parcel_Delivery_Comments__c</fullName>
    <label>Parcel Delivery Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>