force-app/main/default/objects/Network__c/fields/Parcel_Delivery_Name__c.field-meta.xml
<CustomField>
    <fullName>Parcel_Delivery_Name__c</fullName>
    <label>Parcel Delivery Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>