force-app/main/default/objects/Network__c/fields/Parent_Network__c.field-meta.xml
<CustomField>
    <fullName>Parent_Network__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner Info - LPO belongs to this Parent Network.</description>
    <inlineHelpText>Parent Network authorised to approve changes to LPO.</inlineHelpText>
    <label>Parent Network</label>
    <referenceTo>Network__c</referenceTo>
    <relationshipLabel>Sub-ordinates</relationshipLabel>
    <relationshipName>Network</relationshipName>
    <type>Lookup</type>
</CustomField>