force-app/main/default/objects/Network__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Organisation Phone Contact Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>