force-app/main/default/objects/Network__c/fields/Preferred_Method_of_Tasking__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Method_of_Tasking__c</fullName>
    <description>StarTrack: Capture &quot;Preferred Method of Tasking&quot; Information</description>
    <label>Preferred Method of Tasking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Parent Depot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>