force-app/main/default/objects/Network__c/fields/Rain_Shine__c.field-meta.xml
<CustomField>
    <fullName>Rain_Shine__c</fullName>
    <description>Retail PON Geopointe Related Field</description>
    <label>Rain + Shine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>