force-app/main/default/objects/Network__c/fields/Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Id__c</fullName>
    <description>Record Type Id for use in reports</description>
    <formula>CASESAFEID(RecordTypeId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Id</label>
    <type>Text</type>
</CustomField>