force-app/main/default/objects/Network__c/fields/RNPLevel3Manager__c.field-meta.xml
<CustomField>
    <fullName>RNPLevel3Manager__c</fullName>
    <formula>RNPNetworkManager__r.RNPReportingManager__r.RNPReportingManager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RNP Level 3 Manager</label>
	<description>Level 3 RNP Manager for reporting purposes</description>
    <inlineHelpText>Level 3 RNP Manager for reporting purposes</inlineHelpText>
    <type>Text</type>
</CustomField>