force-app/main/default/objects/Network__c/fields/Small_Packet_Air__c.field-meta.xml
<CustomField>
    <fullName>Small_Packet_Air__c</fullName>
    <inlineHelpText>Article ID prefix UA, UW</inlineHelpText>
    <label>Small Packet Air</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No international enquiry can be lodged</fullName>
            </value>
            <value>
                <fullName>Product not available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>