force-app/main/default/objects/Network__c/fields/ST_Email__c.field-meta.xml
<CustomField>
    <fullName>ST_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>StarTrack: Capture email information</description>
    <label>Email</label>
    <type>Checkbox</type>
</CustomField>