force-app/main/default/objects/Network__c/fields/StarTrack_Owned__c.field-meta.xml
<CustomField>
    <fullName>StarTrack_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>StarTrack Owned</description>
    <label>StarTrack Owned</label>
    <type>Checkbox</type>
</CustomField>