force-app/main/default/objects/Network__c/fields/Sun__c.field-meta.xml
<CustomField>
    <fullName>Sun__c</fullName>
    <label>Open Hours Sunday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>