force-app/main/default/objects/Network__c/fields/TBS_Enabled__c.field-meta.xml
<CustomField>
    <fullName>TBS_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TBS_Enabled</label>
    <type>Checkbox</type>
</CustomField>