force-app/main/default/objects/Network__c/fields/TC3888_SuperConsolidation__c.field-meta.xml
<CustomField>
    <fullName>TC3888_SuperConsolidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Super Consolidation</label>
    <type>Checkbox</type>
</CustomField>