force-app/main/default/objects/Network__c/fields/Tue__c.field-meta.xml
<CustomField>
    <fullName>Tue__c</fullName>
    <label>Open Hours Tuesday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>