force-app/main/default/objects/Network__c/recordTypes/Business_Hub_3.recordType-meta.xml
<RecordType>
    <fullName>Business_Hub_3</fullName>
    <active>true</active>
    <description>AP Business Hub</description>
    <label>Business Hub</label>
</RecordType>