force-app/main/default/objects/Network__c/recordTypes/Delivery_1.recordType-meta.xml
<RecordType>
    <fullName>Delivery_1</fullName>
    <active>true</active>
    <label>Delivery</label>
</RecordType>