force-app/main/default/objects/Network__c/recordTypes/Digital_7.recordType-meta.xml
<RecordType>
    <fullName>Digital_7</fullName>
    <active>true</active>
    <description>AP Digital</description>
    <label>Digital</label>
</RecordType>