force-app/main/default/objects/Network__c/recordTypes/International_4.recordType-meta.xml
<RecordType>
    <fullName>International_4</fullName>
    <active>true</active>
    <label>International</label>
</RecordType>