force-app/main/default/objects/Network__c/recordTypes/Lockers_5.recordType-meta.xml
<RecordType>
    <fullName>Lockers_5</fullName>
    <active>true</active>
    <description>Parcel Lockers</description>
    <label>Lockers</label>
</RecordType>