force-app/main/default/objects/Network__c/recordTypes/Other_8.recordType-meta.xml
<RecordType>
    <fullName>Other_8</fullName>
    <active>true</active>
    <description>Other Network Type</description>
    <label>Other</label>
</RecordType>