force-app/main/default/objects/Network__c/recordTypes/Retail_2.recordType-meta.xml
<RecordType>
    <fullName>Retail_2</fullName>
    <active>true</active>
    <label>Retail</label>
</RecordType>