force-app/main/default/objects/Network__c/recordTypes/StarTrack_Agent_11.recordType-meta.xml
<RecordType>
    <fullName>StarTrack_Agent_11</fullName>
    <active>true</active>
    <description>StarTrack Agent Facility</description>
    <label>Agent</label>
</RecordType>