force-app/main/default/objects/Network__c/recordTypes/StarTrack_Care_Agent_12.recordType-meta.xml
<RecordType>
    <fullName>StarTrack_Care_Agent_12</fullName>
    <active>true</active>
    <description>StarTrack Care Agent Facility</description>
    <label>Care Agent</label>
</RecordType>