force-app/main/default/objects/Network__c/recordTypes/StarTrack_Metro_9.recordType-meta.xml
<RecordType>
    <fullName>StarTrack_Metro_9</fullName>
    <active>true</active>
    <description>StarTrack Metro Facility</description>
    <label>Metro</label>
</RecordType>