force-app/main/default/objects/Network__c/recordTypes/StarTrack_Regional_10.recordType-meta.xml
<RecordType>
    <fullName>StarTrack_Regional_10</fullName>
    <active>true</active>
    <description>StarTrack Regional Facility</description>
    <label>Regional</label>
</RecordType>