force-app/main/default/objects/Network__c/recordTypes/Street_Posting_Box_6.recordType-meta.xml
<RecordType>
    <fullName>Street_Posting_Box_6</fullName>
    <active>true</active>
    <description>Street Posting Box</description>
    <label>Street Posting Box</label>
</RecordType>