force-app/main/default/objects/Network__c/validationRules/PartnerInfo_Locker_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>PartnerInfo_Locker_Start_Date</fullName>
    <active>true</active>
    <description>Locker Start Date must be filled if Locker is linked to a Network Outlet.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Lockers_5&apos;, NOT(ISBLANK(Parent_Network__c)),   ISBLANK(Locker_Start_Date__c))</errorConditionFormula>
    <errorMessage>Locker Start Date must be filled.</errorMessage>
</ValidationRule>