force-app/main/default/objects/Network__c/validationRules/PortalUsers_UnableToChangeNetworkName.validationRule-meta.xml
<ValidationRule>
    <fullName>PortalUsers_UnableToChangeNetworkName</fullName>
    <active>true</active>
    <description>myNetwork portal users are not allowed to change the network name.</description>
    <errorConditionFormula>ISCHANGED( Name ) &amp;&amp; $Profile.Name == &apos;MyNetwork Portal&apos;</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You do not have permission to update the network name</errorMessage>
</ValidationRule>