force-app/main/default/objects/Network__c/validationRules/Preferred_Method_of_Tasking_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Preferred_Method_of_Tasking_Validation</fullName>
    <active>true</active>
    <description>This validation checks if the Preferred Method of Tasking field value is acceptable or not.</description>
    <errorConditionFormula>AND(Depot_Area_User_Count__c = 0, 
ISPICKVAL(Preferred_Method_of_Tasking__c, &quot;System&quot;))</errorConditionFormula>
    <errorDisplayField>System__c</errorDisplayField>
    <errorMessage>Preferred method of &quot;system&quot; cannot be selected as preferred method of tasking as there are no system users assigned to any depot areas for this depot.</errorMessage>
</ValidationRule>