force-app/main/default/objects/Network__c/listViews/All_Networks.listView-meta.xml
<ListView>
    <fullName>All_Networks</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>v&amp;d</value>
    </filters>
    <label>Search for Network</label>
    <language>en_US</language>
    <sharedTo>
        <group>AllUsers</group>
        <group>All_Users_Ex_Retail_Merchandise</group>
        <group>All_Users_Ex_SSSW</group>
        <group>AusPostSuperUsers</group>
        <group>BusinessPartners</group>
        <group>CER_Event_Coordinators</group>
        <group>CoE_Case_Team</group>
        <group>Contract_Management_Enquiry_CME</group>
        <group>CustomerDataTeam</group>
        <group>Customer_Service_Operations</group>
        <group>Customer_Service_Reporting</group>
        <group>Customer_Service_Senior_Leadership_Tea</group>
        <group>Customer_Service_Senior_Management_Team</group>
        <group>Customer_Service_TMs</group>
        <group>Dashcord</group>
        <group>DataMigration</group>
        <group>Delegate_Team</group>
        <group>Enterprise</group>
        <group>Holding_User_Lead_Conversion</group>
        <group>Hub_Users</group>
        <group>InsideMarketing422681</group>
        <group>International_Parcel_Team</group>
        <group>LargeAccount</group>
        <group>Lean_Case_Team</group>
        <group>MidMarket</group>
        <group>MidMarketAcquisition</group>
        <group>Non_Compliance_Lodgement_ReadOnly</group>
        <group>Non_Compliance_PON_users</group>
        <group>Non_Warehouse_Discrepancies</group>
        <group>OPC_Admin_Team</group>
        <group>Partner_Info_RW</group>
        <group>RW_to_Retail_Facility</group>
        <group>Retail_Fulfilment_Call_Centre</group>
        <group>Retail_Operations</group>
        <group>Retail_Product_Support</group>
        <group>SSSWAgents</group>
        <group>SSSW_Customer_Service_Reporting</group>
        <group>SSSW_Knowledge_Publish_Articles</group>
        <group>SSSW_PON</group>
        <group>Sales</group>
        <group>SalesLeadership</group>
        <group>SalesOpsSupport</group>
        <group>Sales_Business_System_Team</group>
        <group>Sales_Excellence</group>
        <group>Sales_Implementation</group>
        <group>Sales_Ops_Delivery</group>
        <group>Sales_Product_Sharing_Custom_Pricing</group>
        <group>Sales_Reporting</group>
        <group>Service_Partnership_Pilot</group>
        <group>SmallBusiness</group>
        <group>Social_Media_Mgt</group>
        <group>SystemAdmin</group>
        <group>Territory_Assignment_Edit_Sales_Team</group>
        <group>Trusted_Services_Team</group>
        <group>ULD_Allocation</group>
        <group>WH_System_Support</group>
        <group>Warehouse_Processing_Altona_0350</group>
        <group>Warehouse_Processing_NSW_0200</group>
        <group>Warehouse_Processing_Sai_Cheng_0990</group>
        <group>Warehouse_Processing_Sprintpak_0300</group>
        <group>Warehouse_Processing_WA_0600</group>
    </sharedTo>
</ListView>